fix loadshader, added pipline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(avarice_engine VERSION 0.1.0 LANGUAGES CXX)
+project(AvariceEngine VERSION 0.1.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -12,20 +12,25 @@ add_subdirectory(external/vk-bootstrap)
 #library find functions
 find_package(Vulkan REQUIRED)
 
-file(GLOB SOURCES "*.cpp", "*/*.cpp", "*/*/*.cpp", "*/*/*/*.cpp") #, "*/*/*/*.cpp", "*/*/*/*/*.cpp"
+file(GLOB SOURCES "src/*.cpp", "src/*/*.cpp", "src/*/*/*.cpp", "src/*/*/*/*.cpp",
+                    "*.cpp", "*/*.cpp", "*/*/*.cpp", "*/*/*/*.cpp")
 
-add_library(${PROJECT_NAME} ${SOURCES})
 
+add_library(${PROJECT_NAME} ${SOURCES} 
+            src/rendering/vulkan/vulkan_pipeline_builder.cpp src/rendering/vulkan/vulkan_pipeline_builder.h 
+            src/rendering/vulkan/vulkan_utilities.h src/rendering/vulkan/vulkan_utilities.cpp
+            src/rendering/vulkan/vulkan_renderer.h src/rendering/vulkan/vulkan_renderer.cpp)
 
 target_include_directories(${PROJECT_NAME} 
     PUBLIC 
         $<INSTALL_INTERFACE:include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         ${CMAKE_CURRENT_SOURCE_DIR}/src
-        ${Vulkan_INCLUDE_DIRS} 
+        ${CMAKE_CURRENT_SOURCE_DIR}/rendering
         ${CMAKE_DL_LIBS}
-        glm 
-    PRIVATE 
+        glm
+    PRIVATE
+        ${Vulkan_INCLUDE_DIRS}
         glfw 
         vk-bootstrap 
 )
@@ -38,11 +43,15 @@ target_link_libraries(${PROJECT_NAME}
     PRIVATE 
         glfw 
 ) 
+       
+add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND rmdir /S /Q shaders)
+add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND mkdir shaders)
 
-# shader compilation
-file(GLOB SHADERS shaders/*.frag, shaders/*.vert)
-add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND mkdir ${CMAKE_BINARY_DIR}/shaders)
+file (GLOB SHADERS shaders/*.frag shaders/*.vert)
+
 foreach(shader ${SHADERS})
     get_filename_component(SHADER_NAME ${shader} NAME)
-    add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND glslc -c ${shader} -o ${CMAKE_BINARY_DIR}/${SHADER_NAME}.spv)
+
+    add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND glslc -c ${shader} -o shaders/${SHADER_NAME}.spv)
 endforeach()
+
