half implemented redesign

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,41 +8,40 @@ add_subdirectory(external/glm)
 add_subdirectory(external/glfw)
 add_subdirectory(external/vk-bootstrap)
 
-
 #library find functions
 find_package(Vulkan REQUIRED)
 
-file(GLOB SOURCES "src/*.cpp", "src/*/*.cpp", "src/*/*/*.cpp", "src/*/*/*/*.cpp",
-                    "*.cpp", "*/*.cpp", "*/*/*.cpp", "*/*/*/*.cpp")
-
+file(GLOB SOURCES "src/*.cpp", "src/*/*.cpp",
+                    "*.cpp", "*/*.cpp", "*/*/*.cpp")
 
 add_library(${PROJECT_NAME} ${SOURCES} 
-            src/rendering/vulkan/vulkan_pipeline_builder.cpp src/rendering/vulkan/vulkan_pipeline_builder.h 
-            src/rendering/vulkan/vulkan_utilities.h src/rendering/vulkan/vulkan_utilities.cpp
-            src/rendering/vulkan/vulkan_renderer.h src/rendering/vulkan/vulkan_renderer.cpp)
+            src/buffers/
+            src/rendering/
+            src/rendering/renderpass/
+            src/utils/
+            src/devices/
+            external/glm/glm/glm.hpp)
 
 target_include_directories(${PROJECT_NAME} 
     PUBLIC 
         $<INSTALL_INTERFACE:include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-        ${CMAKE_CURRENT_SOURCE_DIR}/src
-        ${CMAKE_CURRENT_SOURCE_DIR}/rendering
-        ${CMAKE_CURRENT_SOURCE_DIR}/inputs
         ${CMAKE_DL_LIBS}
-        glm
+        ${CMAKE_CURRENT_SOURCE_DIR}/src
     PRIVATE
         ${Vulkan_INCLUDE_DIRS}
         glfw 
         vk-bootstrap 
+        glm
 )
 
 target_link_libraries(${PROJECT_NAME} 
     PUBLIC 
         ${Vulkan_LIBRARIES} 
-        vk-bootstrap 
-        glm 
     PRIVATE 
         glfw 
+        vk-bootstrap 
+        glm 
 ) 
        
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND rmdir /S /Q shaders)
