--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,14 @@ set(CMAKE_CXX_STANDARD 20)
 
 # external libraries
 add_subdirectory(external/glm)
-add_subdirectory(external/glfw)
 add_subdirectory(external/vk-bootstrap)
+add_subdirectory(external/glfw)
+add_subdirectory(external/imgui)
+
+
+# Dear ImGui
+set(IMGUI_DIR external/imgui)
+include_directories(${IMGUI_DIR} ${IMGUI_DIR}/backends ..)
 
 #library find functions
 find_package(Vulkan REQUIRED)
@@ -15,11 +21,15 @@ file(GLOB SOURCES "src/*.cpp", "src/*/*.cpp",
                     "*.cpp", "*/*.cpp", "*/*/*.cpp")
 
 add_library(${PROJECT_NAME} ${SOURCES} 
-            src/buffers/
+            src/
             src/rendering/
+            src/rendering/buffers/
+            src/rendering/pipelines/
+            src/rendering/descriptors/
             src/rendering/renderpass/
+            src/rendering/devices/
             src/utils/
-            src/devices/
+            external/imgui
             external/glm/glm/glm.hpp)
 
 target_include_directories(${PROJECT_NAME} 
@@ -28,8 +38,9 @@ target_include_directories(${PROJECT_NAME}
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         ${CMAKE_DL_LIBS}
         ${CMAKE_CURRENT_SOURCE_DIR}/src
-    PRIVATE
         ${Vulkan_INCLUDE_DIRS}
+        imgui
+    PRIVATE
         glfw 
         vk-bootstrap 
         glm
@@ -38,12 +49,13 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} 
     PUBLIC 
         ${Vulkan_LIBRARIES} 
+        glfw
+        imgui
     PRIVATE 
-        glfw 
         vk-bootstrap 
         glm 
 ) 
-       
+
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND rmdir /S /Q shaders)
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND mkdir shaders)
 
@@ -54,4 +66,5 @@ foreach(shader ${SHADERS})
 
     add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND glslc -c ${shader} -o shaders/${SHADER_NAME}.spv)
 endforeach()
+
 
