--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(external/glm)
 add_subdirectory(external/vk-bootstrap)
 add_subdirectory(external/glfw)
 add_subdirectory(external/SDL)
+add_subdirectory(external/VulkanMemoryAllocator)
 
 # SDL
 set( SDL_STATIC ON CACHE BOOL "" FORCE )
@@ -16,17 +17,19 @@ set( SDL_SHARED OFF CACHE BOOL "" FORCE )
 #library find functions
 find_package(Vulkan REQUIRED)
 
-file(GLOB SOURCES "src/*.cpp", "src/*/*.cpp", "src/rendering/*/*.cpp",
+file(GLOB SOURCES "src/*.cpp", "src/*/*.cpp", "src/rendering/*/*.cpp", "src/rendering/vulkan/*.cpp", "src/rendering/vulkan/*.h",
+                    "core/*.h", "src/core/*h"
                     "*.cpp", "*/*.cpp", "*/*/*.cpp")
 
 add_library(${PROJECT_NAME} ${SOURCES} 
             rendering/
             platform/
+            core/
             src/rendering/
             src/rendering/SDL/
             src/utils/
             src/
-            #external/glm/glm/glm.hpp
+            external/glm/glm/glm.hpp
             )
 
 target_include_directories(${PROJECT_NAME} 
@@ -36,11 +39,14 @@ target_include_directories(${PROJECT_NAME}
         ${CMAKE_DL_LIBS}
         ${CMAKE_CURRENT_SOURCE_DIR}/src
         ${CMAKE_CURRENT_SOURCE_DIR}/src/rendering
+        ${CMAKE_CURRENT_SOURCE_DIR}/core
         ${Vulkan_INCLUDE_DIRS}
+        glm
     PRIVATE
         glfw 
         vk-bootstrap 
-        glm
+        VulkanMemoryAllocator
+        external/stb
 )
 
 target_link_libraries(${PROJECT_NAME} 
@@ -49,9 +55,10 @@ target_link_libraries(${PROJECT_NAME}
         SDL2-static
         ${Vulkan_LIBRARIES} 
         glfw
+        glm 
     PRIVATE 
         vk-bootstrap 
-        glm 
+        VulkanMemoryAllocator
 ) 
 
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND rmdir /S /Q shaders)
