--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,18 +7,13 @@ set(CMAKE_CXX_STANDARD 20)
 add_subdirectory(external/glm)
 add_subdirectory(external/vk-bootstrap)
 add_subdirectory(external/glfw)
-add_subdirectory(external/SDL)
 add_subdirectory(external/VulkanMemoryAllocator)
-
-# SDL
-set( SDL_STATIC ON CACHE BOOL "" FORCE )
-set( SDL_SHARED OFF CACHE BOOL "" FORCE )
 
 #library find functions
 find_package(Vulkan REQUIRED)
 
 file(GLOB SOURCES "src/*.cpp", "src/*/*.cpp", "src/rendering/*/*.cpp", "src/rendering/vulkan/*.cpp", "src/rendering/vulkan/*.h",
-                    "core/*.h", "src/core/*h"
+                    "core/*.h", "src/core/*h", "external/glm/glm/glm.hpp", 
                     "*.cpp", "*/*.cpp", "*/*/*.cpp")
 
 add_library(${PROJECT_NAME} ${SOURCES} 
@@ -26,39 +21,35 @@ add_library(${PROJECT_NAME} ${SOURCES}
             platform/
             core/
             src/rendering/
-            src/rendering/SDL/
             src/utils/
             src/
-            external/glm/glm/glm.hpp
             )
 
 target_include_directories(${PROJECT_NAME} 
     PUBLIC 
         $<INSTALL_INTERFACE:include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        glm
         ${CMAKE_DL_LIBS}
         ${CMAKE_CURRENT_SOURCE_DIR}/src
         ${CMAKE_CURRENT_SOURCE_DIR}/src/rendering
         ${CMAKE_CURRENT_SOURCE_DIR}/core
         ${Vulkan_INCLUDE_DIRS}
-        glm
+        VulkanMemoryAllocator
     PRIVATE
         glfw 
         vk-bootstrap 
-        VulkanMemoryAllocator
         external/stb
 )
 
 target_link_libraries(${PROJECT_NAME} 
     PUBLIC 
-        SDL2main
-        SDL2-static
+        glm 
         ${Vulkan_LIBRARIES} 
         glfw
-        glm 
+        VulkanMemoryAllocator
     PRIVATE 
         vk-bootstrap 
-        VulkanMemoryAllocator
 ) 
 
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND rmdir /S /Q shaders)
