--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 
 # external libraries
 add_subdirectory(external/glm)
-add_subdirectory(external/vk-bootstrap)
 add_subdirectory(external/glfw)
-add_subdirectory(external/VulkanMemoryAllocator)
 
 #library find functions
 find_package(Vulkan REQUIRED)
@@ -18,7 +16,7 @@ file(GLOB SOURCES "src/*.cpp", "src/*/*.cpp", "src/rendering/*/*.cpp", "src/rend
 
 add_library(${PROJECT_NAME} ${SOURCES} 
             rendering/
-            platform/
+            src/platform/
             core/
             src/rendering/
             src/utils/
@@ -35,11 +33,8 @@ target_include_directories(${PROJECT_NAME}
         ${CMAKE_CURRENT_SOURCE_DIR}/src/rendering
         ${CMAKE_CURRENT_SOURCE_DIR}/core
         ${Vulkan_INCLUDE_DIRS}
-        VulkanMemoryAllocator
     PRIVATE
         glfw 
-        vk-bootstrap 
-        external/stb
 )
 
 target_link_libraries(${PROJECT_NAME} 
@@ -47,9 +42,7 @@ target_link_libraries(${PROJECT_NAME}
         glm 
         ${Vulkan_LIBRARIES} 
         glfw
-        VulkanMemoryAllocator
     PRIVATE 
-        vk-bootstrap 
 ) 
 
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND rmdir /S /Q shaders)
